Resolves: fdo#83062 infinite recursion

regression from

commit 7c03fc2fe77f9b1f910f4ab395923e52648c32b5
Date:   Mon Sep 2 14:30:09 2013 +0000
Related: #i123048# Corrected connector layout after reload

verified that #i123048# continues to work

Change-Id: If5fce4b7a88d4d0972f52705334e4b9b48425cca